asm_tests/other_testfiles/invalid_files/error5.s
.name "MORO"
.comment "MORJESTA!"

st %12, %12
